2006-03-16  Kevin Till <ktill@@zmanda.com>
	* server-src/amverify.sh.in: check for EOI. amrestore only 
	  reports EOI for some tapetypes.

2006-03-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Fix heritage of auth.

2006-03-14  Kevin Till <ktill@@zmanda.com>
	* example/amanda.conf.in: add dumptype custom-compress. 
	  add ssh,krb5 as valid input for auth. 
        * man/xml-source/amanda.conf.5.xml: give reference to 
	  custom-compress, encrypt-fast dumptypes.

2006-03-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: Rename fe_amidxtaped_FEEDME to
					  fe_amrecover_FEEDME
	* common-src/amfeatures.c (am_init_feature_set): Set
							 fe_amrecover_FEEDME.
	* restore-src/restore.h (search_tapes): Add their_features parameter.
	* restore-src/amfetchdump.c: Add NULL pointer to search_tapes call.
	* restore-src/amidxtaped.c: Add their_features to search_tapes call.
	* restore-src/restore.c (search_tapes): Send FEEDME only if client
						support it.

2006-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c : Fix errors found using Coverity tools.

2006-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taperscan.c: Fix Coverity fix.

2006-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/scsi-changer-driver.c:
					 Fix errors found using Coverity tools.
	* server-src/diskfile.c: Fix errors found using Coverity tools.
	* server-src/planner.c: Fix errors found using Coverity tools.
	* server-src/taperscan.c: Fix errors found using Coverity tools.

2006-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c: Undo my bad fix.
	* server-src/infofile.c: Fix errors found using Coverity tools.
	* tape-src/tapetype.c: Fix errors found using Coverity tools.

2006-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Fix errors found using Coverity tools.

2006-03-09  Jean-Louis Martineau <martineau@zmanda.com>